tools/data-handler/test/test-data/valid/decision-records/cardRoot/.schema
{
    "id": "card-base-schema",
    "version": 1
}