tools/data-handler/test/test-data/invalid/missing-cardsconfig.json/.cards/local/templates/simplepage/.schema
{
    "id": "template-schema",
    "version": 1
}